<resources>
    <string name="app_name">Kepo</string>
    <string name="make_stalking_easier">Make stalking easier!</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="_2020_by_mobile_team">© 2020 by Mobile Team</string>
    <string name="error">Error</string>
    <string name="ok">Ok</string>
    <string name="please_input_username_and_password">Please input username and password</string>
    <string name="profile">Profile</string>
    <string name="search_user">Search User</string>
    <string name="search_todo">Search Todo</string>
    <string name="my_todo">My Todo</string>
    <string name="username_or_password_is_incorrect">Username or password is incorrect</string>
    <string name="user_not_found">User not found</string>
    <string name="welcome_name">welcome, name</string>
    <string name="search_todo2">Search Todo...</string>
    <string name="profile_username">username</string>
    <string name="name">name</string>
    <string name="last_edited">Last Edited :</string>
    <string name="here_all_your_todos">Here all your todos!</string>
    <string name="by_todo">by todo</string>
    <string name="by_user">by user</string>
    <string name="detail_todo">Detail Todo</string>
    <string name="last_edited2">Last Edited</string>
    <string name="result_for">Result for</string>
    <string name="search_user2">Search User...</string>
    <string name="no_data">No Data</string>
    <string name="your_todo_will_be_visible_to_others">Your todo will be visible to others</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="error_message">Error Message</string>
    <string name="logout">Logout</string>
    <string name="todos">Todos:</string>
    <string name="_100">/100</string>
    <string name="_0">0</string>
</resources>