<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_errorTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/error"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/tv_errorMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/username_or_password_is_incorrect"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/btn_errorMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:textColor="@color/black"
        app:backgroundTint="@color/white"
        android:layout_marginTop="20dp"/>

</LinearLayout>