<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.HomeActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_name"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:paddingTop="35dp"
        android:paddingBottom="75dp"
        android:paddingRight="55dp"
        android:paddingLeft="55dp"
        android:background="@drawable/home_bg"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="90dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="20dp"
        >

        <Button
            android:id="@+id/btn_myTodo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_todo"
            android:drawableRight="@drawable/ic_todo"
            app:backgroundTint="@color/white"
            android:textColor="@color/gray"
            android:text="@string/my_todo"
            android:padding="25dp"
            android:layout_marginTop="20dp"/>

        <Button
            android:id="@+id/btn_searchTodo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_search"
            android:drawableRight="@drawable/ic_search"
            app:backgroundTint="@color/white"
            android:textColor="@color/gray"
            android:text="@string/search_todo"
            android:padding="25dp"
            android:layout_marginTop="20dp"/>

        <Button
            android:id="@+id/btn_searchUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_people"
            android:drawableRight="@drawable/ic_people"
            app:backgroundTint="@color/white"
            android:textColor="@color/gray"
            android:text="@string/search_user"
            android:padding="25dp"
            android:layout_marginTop="20dp"/>

        <Button
            android:id="@+id/btn_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_face"
            android:drawableRight="@drawable/ic_face"
            app:backgroundTint="@color/white"
            android:textColor="@color/gray"
            android:text="@string/profile"
            android:padding="25dp"
            android:layout_marginTop="20dp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_copyright"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_2020_by_mobile_team"
        android:gravity="center"
        android:textColor="@color/white"
        android:padding="12sp"
        android:background="@color/dark_blue"
        android:layout_alignParentBottom="true"
        />

</RelativeLayout>

