<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp"
    tools:context=".activity.ProfileActivity">

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_arrow_back"
        android:padding="20dp"/>

    <TextView
        android:id="@+id/tv_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:layout_marginTop="12dp"
        android:layout_below="@+id/btn_back"/>

    <ImageView
        android:id="@+id/iv_profile_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_person"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tv_profile"
        android:layout_marginTop="36dp"
        android:padding="50dp"/>

    <LinearLayout
        android:id="@+id/ll_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/iv_profile_picture"
        android:layout_marginTop="24dp">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/name"
            android:textSize="24sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="12dp"
            android:textSize="16sp"
            android:text="@string/profile_username"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:textColor="@color/red"
        android:textAlignment="center"
        android:layout_marginTop="24dp"
        android:layout_below="@+id/ll_profile"/>

</RelativeLayout>