<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".activity.SearchTodoActivity"
        android:layout_margin="20dp">

        <LinearLayout
            android:id="@+id/ll_search_todo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_arrow_back"
                android:layout_marginEnd="12dp"
                android:padding="20dp"/>

            <EditText
                android:id="@+id/et_search_todo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/login_bg"
                android:hint="@string/search_todo2"
                android:ems="12"
                android:inputType="text"
                android:singleLine="true"
                android:padding="10dp"/>

            <ImageButton
                android:id="@+id/btn_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_search"
                android:layout_marginStart="12dp"
                android:padding="20dp"/>

        </LinearLayout>

        <CheckBox
            android:layout_marginStart="50dp"
            android:id="@+id/check_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/by_user"
            app:buttonTint="@color/dark_blue"
            android:layout_below="@+id/ll_search_todo"/>

        <CheckBox
            android:id="@+id/check_todo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/by_todo"
            app:buttonTint="@color/dark_blue"
            android:layout_below="@+id/ll_search_todo"
            android:layout_toEndOf="@+id/check_user"/>

        <TextView
            android:id="@+id/tv_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result_for"
            android:layout_below="@+id/check_user"
            android:layout_marginTop="12dp"/>

        <TextView
            android:id="@+id/tv_result_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/check_user"
            android:layout_toEndOf="@+id/tv_result"
            android:layout_marginTop="12dp"/>

        <LinearLayout
            android:id="@+id/ll_detail_user_3"
            android:layout_marginTop="12dp"
            android:layout_below="@+id/tv_result"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_list_todo"
                android:layout_marginTop="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <TextView
            android:id="@+id/tv_no_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_data"
            android:layout_centerInParent="true"
            android:textAlignment="center"/>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminateTint="@color/dark_blue"/>

    </RelativeLayout>

</layout>