<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MyTodoActivity"
    android:layout_margin="20dp">

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_arrow_back"
        android:padding="20dp"/>

    <TextView
        android:id="@+id/tv_detail_todo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/detail_todo"
        android:textSize="36sp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:layout_below="@id/btn_back"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tv_detail_last_edited"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/black"
        android:layout_below="@id/tv_detail_todo"
        android:text="@string/last_edited2" />

    <TextView
        android:id="@+id/tv_last_edited_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@id/tv_detail_todo"
        android:layout_toEndOf="@id/tv_detail_last_edited"/>

    <TextView
        android:id="@+id/tv_todo_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_detail_last_edited"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:text="@string/title"/>

    <TextView
        android:id="@+id/tv_detail_title"
        android:layout_below="@id/tv_todo_title"
        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        android:layout_height="wrap_content"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/tv_description_title"
        android:layout_width="match_parent"
        android:layout_below="@+id/tv_detail_title"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:text="@string/description"/>

    <TextView
        android:id="@+id/tv_detail_description"
        android:layout_width="match_parent"
        android:layout_below="@+id/tv_description_title"
        android:layout_marginTop="5dp"
        android:layout_height="wrap_content"
        android:textColor="@color/black"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminateTint="@color/dark_blue"/>

    <ImageButton
        android:id="@+id/ib_update_todo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_create"
        android:background="@drawable/round_bg"
        android:padding="20dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"/>

</RelativeLayout>

