<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="detail"
            type="com.example.kepo.model.DetailListTodo" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        tools:context=".activity.InsertUpdateActivity">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_arrow_back"
            android:padding="20dp"/>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="36sp"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:layout_below="@id/btn_back"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_tagline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:layout_below="@+id/tv_title"
            android:text="@string/your_todo_will_be_visible_to_others"/>

        <EditText
            android:id="@+id/et_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_bg"
            android:inputType="text"
            android:layout_marginTop="50dp"
            android:singleLine="true"
            android:layout_below="@+id/tv_tagline"
            android:textColor="@color/black"
            android:hint="@string/title"
            android:text="@={detail.title}"
            android:padding="10dp"/>

        <EditText
            android:id="@+id/et_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_bg"
            android:inputType="textMultiLine"
            android:lines="8"
            android:text="@={detail.description}"
            android:maxLines="15"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/et_title"
            android:gravity="top"
            android:padding="10dp"
            android:hint="@string/description"/>

        <TextView
            android:id="@+id/tv_str_length"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_description"
            android:layout_toStartOf="@+id/ll_length"
            android:layout_marginTop="12dp"
            android:text="" />

        <LinearLayout
            android:id="@+id/ll_length"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/et_description"
            android:layout_marginTop="12dp">

            <TextView
                android:id="@+id/tv_max_length"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/_100"/>

        </LinearLayout>

        <TextView
            android:id="@+id/tv_error_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_below="@+id/ll_length"
            android:textColor="@color/red"
            android:text="@string/error_message"
            android:textStyle="bold"
            android:textAlignment="center"/>

        <ImageButton
            android:id="@+id/ib_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_check"
            android:background="@drawable/round_bg"
            android:padding="20dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"/>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminateTint="@color/dark_blue"/>

    </RelativeLayout>

</layout>