<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.SearchUserActivity"
        android:layout_margin="20dp">

        <LinearLayout
            android:id="@+id/ll_search_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_arrow_back"
                android:layout_marginEnd="12dp"
                android:padding="20dp"/>

            <EditText
                android:id="@+id/et_search_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/login_bg"
                android:inputType="text"
                android:singleLine="true"
                android:hint="@string/search_user2"
                android:ems="12"
                android:padding="10dp"/>

            <ImageButton
                android:id="@+id/btn_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_search"
                android:layout_marginStart="12dp"
                android:padding="20dp"/>

        </LinearLayout>

        <TextView
            android:id="@+id/tv_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result_for"
            android:layout_below="@+id/ll_search_user"
            android:layout_marginTop="12dp"/>

        <TextView
            android:id="@+id/tv_result_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_search_user"
            android:layout_toEndOf="@+id/tv_result"
            android:layout_marginTop="12dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_list_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_below="@id/tv_result_value"/>

        <TextView
            android:id="@+id/tv_no_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_data"
            android:layout_centerInParent="true"/>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminateTint="@color/dark_blue"
            />

    </RelativeLayout>

</layout>