<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/coordinatorLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                tools:context=".activity.MyTodoActivity">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/btn_back"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ic_arrow_back"
                        android:padding="20dp"/>

                    <TextView
                        android:id="@+id/tv_mytodo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/my_todo"
                        android:textSize="36sp"
                        android:layout_marginTop="20dp"
                        android:textColor="@color/black"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/tv_mytodo_tagline"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/here_all_your_todos"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_list_todo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/tv_no_data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/no_data"
                    android:layout_centerInParent="true"
                    android:textAlignment="center"/>

                <ProgressBar
                    android:id="@+id/progress_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:indeterminateTint="@color/dark_blue"/>

                <ImageButton
                    android:id="@+id/ib_create_todo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_add"
                    android:background="@drawable/round_bg"
                    android:padding="20dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"/>

            </RelativeLayout>


        </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>